Add Unity testing framework as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sdevicecore"]
 	path = Submodules/sdevicecore
 	url = ../sdevicecore.git
+[submodule "Testing/Unity"]
+	path = Testing/Unity
+	url = ../forks/unity.git
