--- a/.cproject
+++ b/.cproject
@@ -65,7 +65,7 @@
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Inc"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Src"/>
-						<entry excluding="*/Submodules/|*/Testing/|*/Doxygen/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Submodules"/>
+						<entry excluding="*/Submodules/|*/Doxygen/|*/Testing/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Submodules"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -128,7 +128,7 @@
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Inc"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Src"/>
-						<entry excluding="*/Submodules/|*/Test/|*/Testing/|*/Doxygen/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Submodules"/>
+						<entry excluding="*/Submodules/|*/Test/|*/Doxygen/|*/Testing/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Submodules"/>
 						<entry excluding="Unity/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Testing"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Testing/Unity/extras/fixture/src"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Testing/Unity/src"/>
